@@ -1,12 +1,10 @@
 package redis.clients.jedis;
 
-import static org.hamcrest.CoreMatchers.equalTo;
 import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
@@ -18,13 +16,14 @@ import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 
-import org.hamcrest.CoreMatchers;
-import org.hamcrest.Matcher;
+import org.hamcrest.MatcherAssert;
+import org.hamcrest.Matchers;
 import org.junit.Test;
 
 import redis.clients.jedis.exceptions.JedisDataException;
 import redis.clients.jedis.resps.Tuple;
 import redis.clients.jedis.commands.jedis.JedisCommandsTestBase;
+import redis.clients.jedis.params.SetParams;
 import redis.clients.jedis.util.SafeEncoder;
 
 public class PipeliningTest extends JedisCommandsTestBase {
@@ -81,6 +80,59 @@ public class PipeliningTest extends JedisCommandsTestBase {
     assertEquals(Long.valueOf(1), zcard.get());
     assertEquals(1, lrange.get().size());
     assertNotNull(hgetAll.get().get("foo"));
+    assertEquals(1, smembers.get().size());
+    assertEquals(1, zrangeWithScores.get().size());
+    assertEquals("123", getrange.get());
+    byte[] expectedGetRangeBytes = { 6, 7, 8 };
+    assertArrayEquals(expectedGetRangeBytes, getrangeBytes.get());
+  }
+
+  @Test
+  public void intermediateSyncs() {
+    jedis.set("string", "foo");
+    jedis.lpush("list", "foo");
+    jedis.hset("hash", "foo", "bar");
+    jedis.zadd("zset", 1, "foo");
+    jedis.sadd("set", "foo");
+    jedis.setrange("setrange", 0, "0123456789");
+    byte[] bytesForSetRange = { 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 };
+    jedis.setrange("setrangebytes".getBytes(), 0, bytesForSetRange);
+
+    Pipeline p = jedis.pipelined();
+    Response<String> string = p.get("string");
+    Response<String> list = p.lpop("list");
+    Response<String> hash = p.hget("hash", "foo");
+    Response<List<String>> zset = p.zrange("zset", 0, -1);
+    Response<String> set = p.spop("set");
+    Response<Boolean> blist = p.exists("list");
+    p.sync();
+
+    assertEquals("foo", string.get());
+    assertEquals("foo", list.get());
+    assertEquals("bar", hash.get());
+    assertEquals("foo", zset.get().iterator().next());
+    assertEquals("foo", set.get());
+    assertEquals(false, blist.get());
+
+    Response<Double> zincrby = p.zincrby("zset", 1, "foo");
+    Response<Long> zcard = p.zcard("zset");
+    p.lpush("list", "bar");
+    Response<List<String>> lrange = p.lrange("list", 0, -1);
+    Response<Map<String, String>> hgetAll = p.hgetAll("hash");
+    p.sadd("set", "foo");
+    p.sync();
+
+    assertEquals(Double.valueOf(2), zincrby.get());
+    assertEquals(Long.valueOf(1), zcard.get());
+    assertEquals(1, lrange.get().size());
+    assertNotNull(hgetAll.get().get("foo"));
+
+    Response<Set<String>> smembers = p.smembers("set");
+    Response<List<Tuple>> zrangeWithScores = p.zrangeWithScores("zset", 0, -1);
+    Response<String> getrange = p.getrange("setrange", 1, 3);
+    Response<byte[]> getrangeBytes = p.getrange("setrangebytes".getBytes(), 6, 8);
+    p.sync();
+
     assertEquals(1, smembers.get().size());
     assertEquals(1, zrangeWithScores.get().size());
     assertEquals("123", getrange.get());
@@ -156,9 +208,13 @@ public class PipeliningTest extends JedisCommandsTestBase {
 
   @Test
   public void pipelineSelect() {
+    jedis.set("foo", "bar");
+    jedis.swapDB(0, 1);
     Pipeline p = jedis.pipelined();
+    p.get("foo");
     p.select(1);
-    p.sync();
+    p.get("foo");
+    assertEquals(Arrays.<Object>asList(null, "OK", "bar"), p.syncAndReturnAll());
   }
 
   @Test
@@ -225,8 +281,8 @@ public class PipeliningTest extends JedisCommandsTestBase {
 //    Response<List<Object>> r3 = p.exec();
 //    List<Object> result = p.syncAndReturnAll();
 //
-//    assertEquals(new Long(-1), r1.get());
-//    assertEquals(new Long(-3), r2.get());
+//    assertEquals(Long.valueOf(-1), r1.get());
+//    assertEquals(Long.valueOf(-3), r2.get());
 //
 //    assertEquals(4, result.size());
 //
@@ -237,11 +293,11 @@ public class PipeliningTest extends JedisCommandsTestBase {
 //    // 4th result is a list with the results from the multi
 //    @SuppressWarnings("unchecked")
 //    List<Object> multiResult = (List<Object>) result.get(3);
-//    assertEquals(new Long(-1), multiResult.get(0));
-//    assertEquals(new Long(-3), multiResult.get(1));
+//    assertEquals(Long.valueOf(-1), multiResult.get(0));
+//    assertEquals(Long.valueOf(-3), multiResult.get(1));
 //
-//    assertEquals(new Long(-1), r3.get().get(0));
-//    assertEquals(new Long(-3), r3.get().get(1));
+//    assertEquals(Long.valueOf(-1), r3.get().get(0));
+//    assertEquals(Long.valueOf(-3), r3.get().get(1));
 //
 //  }
 //
@@ -412,6 +468,49 @@ public class PipeliningTest extends JedisCommandsTestBase {
   }
 
   @Test
+  public void waitAof() {
+    Pipeline p = jedis.pipelined();
+    p.set("wait", "aof");
+    p.waitAOF(1L, 0L, 0L);
+    p.sync();
+
+    try (Jedis j = new Jedis(HostAndPorts.getRedisServers().get(4))) {
+      j.auth("foobared");
+      assertEquals("aof", j.get("wait"));
+    }
+  }
+
+  @Test
+  public void setGet() {
+    Pipeline p = jedis.pipelined();
+    Response<String> _ok = p.set("hello", "world");
+    Response<String> _world = p.setGet("hello", "jedis", SetParams.setParams());
+    Response<String> _jedis = p.get("hello");
+    Response<String> _null = p.setGet("key", "value", SetParams.setParams());
+    p.sync();
+
+    assertEquals("OK", _ok.get());
+    assertEquals("world", _world.get());
+    assertEquals("jedis", _jedis.get());
+    assertNull(_null.get());
+  }
+
+  @Test
+  public void setGetBinary() {
+    Pipeline p = jedis.pipelined();
+    Response<String> _ok = p.set("hello".getBytes(), "world".getBytes());
+    Response<byte[]> _world = p.setGet("hello".getBytes(), "jedis".getBytes(), SetParams.setParams());
+    Response<byte[]> _jedis = p.get("hello".getBytes());
+    Response<byte[]> _null = p.setGet("key".getBytes(), "value".getBytes(), SetParams.setParams());
+    p.sync();
+
+    assertEquals("OK", _ok.get());
+    assertArrayEquals("world".getBytes(), _world.get());
+    assertArrayEquals("jedis".getBytes(), _jedis.get());
+    assertNull(_null.get());
+  }
+
+  @Test
   public void testEval() {
     String script = "return 'success!'";
 
@@ -482,8 +581,8 @@ public class PipeliningTest extends JedisCommandsTestBase {
     p.sync();
 
     List<?> results = (List<?>) result.get();
-    assertThat((List<String>) results.get(0), listWithItem("key1"));
-    assertThat((List<Long>) results.get(1), listWithItem(2L));
+    MatcherAssert.assertThat((List<String>) results.get(0), Matchers.hasItem("key1"));
+    MatcherAssert.assertThat((List<Long>) results.get(1), Matchers.hasItem(2L));
   }
 
   @Test
@@ -496,8 +595,8 @@ public class PipeliningTest extends JedisCommandsTestBase {
     p.sync();
 
     List<?> results = (List<?>) result.get();
-    assertThat((List<byte[]>) results.get(0), listWithItem(bKey));
-    assertThat((List<Long>) results.get(1), listWithItem(2L));
+    MatcherAssert.assertThat((List<byte[]>) results.get(0), Matchers.hasItem(bKey));
+    MatcherAssert.assertThat((List<Long>) results.get(1), Matchers.hasItem(2L));
   }
 
   @Test
@@ -768,8 +867,4 @@ public class PipeliningTest extends JedisCommandsTestBase {
 //    assertTrue(firstKey.equals(value1) || firstKey.equals(value2));
 //    assertTrue(secondKey.equals(value1) || secondKey.equals(value2));
 //  }
-
-  private <T> Matcher<Iterable<? super T>> listWithItem(T expected) {
-    return CoreMatchers.<T> hasItem(equalTo(expected));
-  }
 }
