@@ -1,11 +1,12 @@
 package redis.clients.jedis.commands.jedis;
 
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.greaterThanOrEqualTo;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
 
+import java.util.List;
+import org.junit.Assert;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -16,16 +17,15 @@ import redis.clients.jedis.exceptions.JedisDataException;
 import redis.clients.jedis.HostAndPorts;
 import redis.clients.jedis.util.SafeEncoder;
 
-import java.util.List;
-
 public class ObjectCommandsTest extends JedisCommandsTestBase {
 
-  private String key = "mylist";
-  private byte[] binaryKey = SafeEncoder.encode(key);
-  private static final HostAndPort lfuHnp = HostAndPorts.getRedisServers().get(7);
+  private final String key = "mylist";
+  private final byte[] binaryKey = SafeEncoder.encode(key);
+  private final HostAndPort lfuHnp = HostAndPorts.getRedisServers().get(7);
   private Jedis lfuJedis;
 
   @Before
+  @Override
   public void setUp() throws Exception {
     super.setUp();
 
@@ -35,6 +35,7 @@ public class ObjectCommandsTest extends JedisCommandsTestBase {
   }
 
   @After
+  @Override
   public void tearDown() throws Exception {
     lfuJedis.disconnect();
     super.tearDown();
@@ -44,23 +45,30 @@ public class ObjectCommandsTest extends JedisCommandsTestBase {
   public void objectRefcount() {
     jedis.lpush(key, "hello world");
     Long refcount = jedis.objectRefcount(key);
-    assertEquals(new Long(1), refcount);
+    assertEquals(Long.valueOf(1), refcount);
 
     // Binary
     refcount = jedis.objectRefcount(binaryKey);
-    assertEquals(new Long(1), refcount);
+    assertEquals(Long.valueOf(1), refcount);
 
   }
 
   @Test
-  public void objectEncoding() {
-    jedis.lpush(key, "hello world");
-    String encoding = jedis.objectEncoding(key);
-    assertEquals("quicklist", encoding);
+  public void objectEncodingString() {
+    jedis.set(key, "hello world");
+    assertThat(jedis.objectEncoding(key), containsString("str"));
 
     // Binary
-    encoding = SafeEncoder.encode(jedis.objectEncoding(binaryKey));
-    assertEquals("quicklist", encoding);
+    assertThat(SafeEncoder.encode(jedis.objectEncoding(binaryKey)), containsString("str"));
+  }
+
+  @Test
+  public void objectEncodingList() {
+    jedis.lpush(key, "hello world");
+    assertThat(jedis.objectEncoding(key), containsString("list"));
+
+    // Binary
+    assertThat(SafeEncoder.encode(jedis.objectEncoding(binaryKey)), containsString("list"));
   }
 
   @Test
@@ -68,22 +76,22 @@ public class ObjectCommandsTest extends JedisCommandsTestBase {
     jedis.lpush(key, "hello world");
 
     Long time = jedis.objectIdletime(key);
-    assertEquals(new Long(0), time);
+    assertEquals(Long.valueOf(0), time);
 
     // Binary
     time = jedis.objectIdletime(binaryKey);
-    assertEquals(new Long(0), time);
+    assertEquals(Long.valueOf(0), time);
   }
 
   @Test
   public void objectHelp() {
     // String
     List<String> helpTexts = jedis.objectHelp();
-    assertNotNull(helpTexts);
+    Assert.assertNotNull(helpTexts);
 
     // Binary
     List<byte[]> helpBinaryTexts = jedis.objectHelpBinary();
-    assertNotNull(helpBinaryTexts);
+    Assert.assertNotNull(helpBinaryTexts);
   }
 
   @Test
@@ -91,20 +99,13 @@ public class ObjectCommandsTest extends JedisCommandsTestBase {
     lfuJedis.set(key, "test1");
     lfuJedis.get(key);
     // String
-    Long count = lfuJedis.objectFreq(key);
-    assertTrue(count > 0);
-
+    assertThat(lfuJedis.objectFreq(key), greaterThanOrEqualTo(1L));
     // Binary
-    count = lfuJedis.objectFreq(binaryKey);
-    assertTrue(count > 0);
+    assertThat(lfuJedis.objectFreq(binaryKey), greaterThanOrEqualTo(1L));
 
-    assertNull(lfuJedis.objectFreq("no_such_key"));
+    Assert.assertNull(lfuJedis.objectFreq("no_such_key"));
 
-    try {
-      jedis.set(key, "test2");
-      jedis.objectFreq(key);
-      fail("Freq is only allowed with LFU policy");
-    } catch (JedisDataException e) {
-    }
+    jedis.set(key, "test2");
+    Assert.assertThrows("Freq is only allowed with LFU policy", JedisDataException.class, () -> jedis.objectFreq(key));
   }
 }
